fix(index.html): marie-louise + alignments

--- a/src/scss/sections/_index.scss
+++ b/src/scss/sections/_index.scss
@@ -46,7 +46,9 @@ section.introduction {
     padding: 10px;
     text-align: center;
     display: table;
-    background: none;
+    background: white;
+    z-index: -3;
+    border: rem(10) solid white;
 
     .video-overlay:before {
       content: '';
@@ -65,6 +67,7 @@ section.introduction {
       position: absolute;
       left: 50%; top: 50%;
       transform: translate(-50%, -50%);
+      -webkit-animation: fadein 4s;
 
       &:before {
         content: '';
@@ -77,13 +80,17 @@ section.introduction {
       }
     }
 
+    @keyframes fadein {
+      0%{
+        opacity: 0;
+      }
+      100%{
+        opacity: 1;
+      }
+    }
+
     .logo{
-      height: 100px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      margin: auto;
+      max-height: 300px;
     }
 
     #mouse-wheel {
@@ -105,19 +112,21 @@ section.introduction {
 section.introduction .center {
     display: table-cell;
     vertical-align: middle;
+    transform: translateY(-15px);
 }
 section.introduction .center h1 {
+    padding-top: 5px;
     font-family: 'Playfair Display', serif;
     font-style: italic;
     color: #5C5C5C;
-    font-size: 36px;
+    font-size: 32px;
 }
 section.introduction .bottom {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     text-align: center;
     font-size: 60%;
 
